--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,26 @@ html{
     /*sirve para evitar problemas en los padding cuando cambian el tamaño
     de los elementos*/
     box-sizing: border-box;
+
+    /*Efecto Scrolling vertical*/
+    scroll-snap-type: y mandatory;
 }
+
+
+/*Snap Scrolling*/
+/*IMPORTANTE: EN VERSION MOBILE SE VA HACIENDO SCROLLING POR CADA
+UNO DE LOS SERVICIOS (HABILIDADES) PERO EN VERSION PC SE HACE
+SCROLLING POR LA SECCION COMPLETA , LO CUAL MEJORA LA SENSACION DE 
+SCROLLING*/
+.servicio,
+.hero,
+.navegacion-principal,
+.formulario,
+.footer{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 
 /*Sirve para evitar que los padding afecten el tamaño de un elemento*/
 * , *:before , *:after{
@@ -78,6 +97,7 @@ h1,h2,h3{
 
 .nav-bg{
     background-color: var(--secundario);
+    border: var(--gris) solid;
 }
 
 /*Clase del nav principal*/
@@ -110,6 +130,14 @@ h1,h2,h3{
     .navegacion-principal{
         flex-direction: row;
         justify-content: space-between; /*es necesario solo en version pc*/
+    }
+
+    /*Snap Scrolling: ENFOCADO EN VERSION PC*/
+    .servicios,
+    .navegacion-principal,
+    .formulario{
+        scroll-snap-align: center;
+        scroll-snap-stop: always;
     }
 }
 
@@ -165,6 +193,7 @@ h1,h2,h3{
 }
 
 /*************************** CSS Grid **********************/
+
 /* Usamos css grid para la seccion de servicios */
 @media (min-width: 768px){
     .servicios{
@@ -177,6 +206,7 @@ h1,h2,h3{
     }
         
 }
+
 
 .servicio{
     display: flex;
@@ -205,4 +235,78 @@ h1,h2,h3{
     display: flex;
     justify-content: space-evenly;
     align-items: center; /*Alinea de forma vertical*/
+}
+
+/************* *Formulario* *******************/
+.formulario{
+    background-color: var(--gris);
+    width: min(60rem ,100%); /*usa el menor valor */
+    margin: 0 auto; /*centrar verticalmente*/
+    padding: 2rem;
+    border: var(--oscuro) solid;
+    border-radius: 2rem;
+}
+
+.formulario fieldset{
+    border: none;
+}
+
+.formulario legend{
+    margin: 0 auto;
+    color: var(--primario);
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+
+.campo{
+    margin-bottom: 1rem;
+}
+
+.campo label{
+    color: var(--blanco);
+    display: block;
+    font-weight: bold;
+    margin-bottom: .5rem;
+}
+
+.input-text{
+    border: none;
+    width: 100%;
+    padding: 1rem;
+    border-radius: .5rem;
+}
+
+.input-text-area{
+    width: 100%;
+    height: 20rem;
+    border-radius: .5rem;
+}
+
+.contenedor-boton-submit{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+}
+
+.boton-submit{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem;
+    border-radius: 2rem;
+    border: var(--secundario) solid;
+    width: 100%;
+}
+
+.boton-submit:hover{
+    cursor: pointer;
+    box-shadow: 0px 6px 15px 1px rgba(138,138,138,1);
+}
+
+/*************** Footer ***************************/
+.footer{
+    text-align: center;
+    font-weight: bolder;
 }
